--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNo+KUjD0uK14vpSAhug1vt",
+      "authorship_tag": "ABX9TyPjAzJYB3/IMPFMa+p4UOe2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,8 +121,8 @@
       "cell_type": "code",
       "source": [
         "#define a function to process your input and output\n",
-        "def greet(fname ,lname):\n",
-        "   return \"Hello 👋: \" + fname + \" \" + lname + \"!\""
+        "def greet(firstname ,lastname):\n",
+        "   return \"Hello 👋: \" + firstname + \" \" + lastname + \"!\""
       ],
       "metadata": {
         "id": "hrFsgGRDonLl"
